--- a/bs5/BShw03.html
+++ b/bs5/BShw03.html
@@ -6,6 +6,7 @@
     <title>HardCopy2</title>
     <!-- Latest compiled and minified CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/css/style.css" rel="stylesheet" />
     <!-- Latest compiled JavaScript -->
     <script src="/js/bootstrap.bundle.min.js"></script>
   </head>
