--- a/bs5/BShw03.html
+++ b/bs5/BShw03.html
@@ -86,13 +86,13 @@
               <h1>Lorem ipsum dolor</h1>
               <ul id="port">
                 <li>
-                    <img src="/images/img3.jpg" alt="comp0"></li>
+                    <img src="/images/img3.jpg" alt="comp0" class="col-6"></li>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta deserunt aliquam nesciunt consequatur?</p>
-                <li><img src="/images/img1.jpg" alt="comp1"></li>
+                <li><img src="/images/img1.jpg" alt="comp1" class="col-6"></li>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta deserunt aliquam nesciunt consequatur?</p>
-                <li><img src="/images/img4.jpg" alt="comp2"></li>
+                <li><img src="/images/img4.jpg" alt="comp2" class="col-6"></li>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta deserunt aliquam nesciunt consequatur?</p>
-                <li><img src="/images/img2.jpg" alt="comp3"></li>
+                <li><img src="/images/img2.jpg" alt="comp3" class="col-6"></li>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta deserunt aliquam nesciunt consequatur?</p>
               </ul>
             </div>
