--- a/bs5/BShw03.html
+++ b/bs5/BShw03.html
@@ -1,61 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HardCopy2</title>
-    <!-- Latest compiled and minified CSS -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="/css/style.css" rel="stylesheet" />
-    <!-- Latest compiled JavaScript -->
-    <script src="/js/bootstrap.bundle.min.js"></script>
-  </head>
-  <body>
-    <div class="bg-primary">
-      <header id="masthead">
-        <h1 class="text-white">FTDBLUEMOOD</h1>
-        <div class="text-white size-em">Lorem ipsum dolor sit amet</div>
-      </header>
-      <article id="maincontent" class="mx-5 pb-5 bg-light">
-        <section id="titlebar">
-          <!--<img src="/images/header2.jpg" alt="cute children" class="mx-auto d-block"/>-->
-          <!-- Carousel -->
-          <div id="demo" class="carousel slide" data-bs-ride="carousel">
 
-            <!-- Indicators/dots -->
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-              <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-              <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-              <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
-            </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>HardCopy2</title>
+  <!-- Latest compiled and minified CSS -->
+  <link href="/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="/css/style.css" rel="stylesheet" />
+  <!-- Latest compiled JavaScript -->
+  <script src="/js/bootstrap.bundle.min.js"></script>
+</head>
 
-            <!-- The slideshow/carousel -->
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="/images/header.jpg" alt="Penguins" class="d-block w-100">
-              </div>
-              <div class="carousel-item">
-                <img src="/images/header2.jpg" alt="Cute Children" class="d-block w-100">
-              </div>
-              <div class="carousel-item">
-                <img src="/images/header3.jpg" alt="Kids and Dog" class="d-block w-100">
-              </div>
-              <div class="carousel-item">
-                <img src="/images/header4.jpg" alt="Princess and Magical Tree" class="d-block w-100">
-              </div>
-            </div>
+<body>
+  <div class="bg-primary">
+    <header id="masthead">
+      <h1 class="text-white">FTDBLUEMOOD</h1>
+      <div class="text-white size-em">Lorem ipsum dolor sit amet</div>
+    </header>
+    <article id="maincontent" class="mx-5 pb-5 bg-light">
+      <section id="titlebar">
+        <!--<img src="/images/header2.jpg" alt="cute children" class="mx-auto d-block"/>-->
+        <!-- Carousel -->
+        <div id="demo" class="carousel slide" data-bs-ride="carousel">
 
-            <!-- Left and right controls/icons -->
-            <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon"></span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-              <span class="carousel-control-next-icon"></span>
-            </button>
+          <!-- Indicators/dots -->
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
           </div>
-        </section>
-        <!--<div class="row">
+
+          <!-- The slideshow/carousel -->
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="/images/header.jpg" alt="Penguins" class="d-block w-100">
+            </div>
+            <div class="carousel-item">
+              <img src="/images/header2.jpg" alt="Cute Children" class="d-block w-100">
+            </div>
+            <div class="carousel-item">
+              <img src="/images/header3.jpg" alt="Kids and Dog" class="d-block w-100">
+            </div>
+            <div class="carousel-item">
+              <img src="/images/header4.jpg" alt="Princess and Magical Tree" class="d-block w-100">
+            </div>
+          </div>
+
+          <!-- Left and right controls/icons -->
+          <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </button>
+        </div>
+      </section>
+      <!--<div class="row">
           <ul>
             <li>
               <a title="home" href="home.html">Home</a>
@@ -66,109 +68,148 @@
             </li>
           </ul>
         </div>-->
-        <!-- Navigation Bar -->
-        <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
-          <div class="container-fluid">
-            <!--<a class="navbar-brand" href="#">Logo</a>-->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" title="home" href="home.html">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" title="blog" href="blog.html">Blog</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" title="gallery" href="gallery.html">Gallery</a>
-                </li> 
-                <li class="nav-item">
-                  <a class="nav-link" title="about" href="about.html">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" title="contact" href="contact.html">Contact</a>
-              </ul>
-            </div>
+      <!-- Navigation Bar -->
+      <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+        <div class="container-fluid">
+          <!--<a class="navbar-brand" href="#">Logo</a>-->
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" title="home" href="home.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" title="blog" href="blog.html">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" title="gallery" href="gallery.html">Gallery</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" title="about" href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" title="contact" href="contact.html">Contact</a>
+            </ul>
           </div>
-</nav>
-        <section class="container" id="mainfeatures">
-          <div class="row">
-            <div class="col-4">
-              <h1>Your Options</h1>
-              <img class="float-start" src="/images/img1.png" alt="bulb" />
-              <a title="View Our Options" href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla?</a>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, reiciendis.</p>
-            </div>
-            <div class="col-4">
-              <h1>Company News</h1>
-              <img class="float-start" src="/images/img2.png" alt="clock" />
-              <a title="View Company News" href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi?</p>
-            </div>
-            <div class="col-4">
-              <h1>Have a Question?</h1>
-              <img class="float-start" src="/images/img3.png" alt="clock" />
-              <a title="View Company News" href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi?</p>
-            </div>
+        </div>
+      </nav>
+      <section class="container" id="mainfeatures">
+        <div class="row">
+          <div class="col-4">
+            <h1>Your Options</h1>
+            <img class="float-start" src="/images/img1.png" alt="bulb" />
+            <a title="View Our Options" href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla?</a>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, reiciendis.</p>
           </div>
-        </section>
-        <section id="second feature">
-          <div class="row">
-            <div class="col-8">
-              <h1>Lorem ipsum dolor</h1>
-              <ul id="port">
-                <li>
-                    <img src="/images/img3.jpg" alt="comp0"></li>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta deserunt aliquam nesciunt consequatur?</p>
-                <li><img src="/images/img1.jpg" alt="comp1"></li>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta deserunt aliquam nesciunt consequatur?</p>
-                <li><img src="/images/img4.jpg" alt="comp2"></li>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta deserunt aliquam nesciunt consequatur?</p>
-                <li><img src="/images/img2.jpg" alt="comp3"></li>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta deserunt aliquam nesciunt consequatur?</p>
-              </ul>
-            </div>
-            <div class="col-4">
-              <h1>Lorem ipsum dolor</h1>
-              <ul>
-                <li><a title="link1" href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></li>
-                <li><a title="link2" href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></li>
-                <li><a title="link3" href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></li>
-                <li><a title="link4" href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></li>
-                <li><a title="link5" href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></li>
-                <li><a title="link6" href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></li>
-                <li><a title="link7" href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></li>
-                <li><a title="link8" href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></li>
-                <li><a title="link9" href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></li>
-                <li><a title="link10" href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></li>
-                <li><a title="link11" href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></li>
-              </ul>
+          <div class="col-4">
+            <h1>Company News</h1>
+            <img class="float-start" src="/images/img2.png" alt="clock" />
+            <a title="View Company News" href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi?</p>
+          </div>
+          <div class="col-4">
+            <h1>Have a Question?</h1>
+            <img class="float-start" src="/images/img3.png" alt="clock" />
+            <a title="View Company News" href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi?</p>
+          </div>
+        </div>
+      </section>
+      <section id="second feature">
+        <div class="row">
+          <div class="col-8">
+            <h1>Lorem ipsum dolor</h1>
+            <ul id="port">
+              <li>
+                <img src="/images/img3.jpg" alt="comp0">
+              </li>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta deserunt aliquam nesciunt consequatur?
+              </p>
+              <li><img src="/images/img1.jpg" alt="comp1"></li>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta deserunt aliquam nesciunt consequatur?
+              </p>
+              <li><img src="/images/img4.jpg" alt="comp2"></li>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta deserunt aliquam nesciunt consequatur?
+              </p>
+              <li><img src="/images/img2.jpg" alt="comp3"></li>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta deserunt aliquam nesciunt consequatur?
+              </p>
+            </ul>
+          </div>
+          <div class="col-4">
+            <h1>Lorem ipsum dolor</h1>
+            <ul>
+              <li><a title="link1" href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></li>
+              <li><a title="link2" href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></li>
+              <li><a title="link3" href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></li>
+              <li><a title="link4" href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></li>
+              <li><a title="link5" href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></li>
+              <li><a title="link6" href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></li>
+              <li><a title="link7" href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></li>
+              <li><a title="link8" href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></li>
+              <li><a title="link9" href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></li>
+              <li><a title="link10" href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></li>
+              <li><a title="link11" href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></li>
+            </ul>
 
-            </div>
           </div>
-        </section>
-        <section id="last content">
-          <div class="row">
-            <div class="col-8">
-              <h1>Lorem ipsum</h1>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae unde in sequi hic commodi atque explicabo accusamus accusantium, alias quae odio ad porro id, laudantium placeat mollitia eius quia obcaecati architecto? Excepturi labore facilis ex ipsa voluptates aut in? Tenetur, laboriosam. Enim distinctio aliquam cupiditate vero aperiam sit quas repellat!</p>
-              <a title="read more" href="#">READ MORE</a>
-            </div>
-            <div class="col-4">
-              <h1>lorem lorem lorem</h1>
-              <img src="/images/img5.jpg" alt="blue">
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil, blanditiis.</p>
-              <a title="read more" href="#">READ MORE</a>
-            </div>
+        </div>
+      </section>
+      <section id="last content">
+        <div class="row">
+          <div class="col-8">
+            <h1>Lorem ipsum</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae unde in sequi hic commodi atque
+              explicabo accusamus accusantium, alias quae odio ad porro id, laudantium placeat mollitia eius quia
+              obcaecati architecto? Excepturi labore facilis ex ipsa voluptates aut in? Tenetur, laboriosam. Enim
+              distinctio aliquam cupiditate vero aperiam sit quas repellat!</p>
+            <a title="read more" href="#">READ MORE</a>
+            <!-- Button to Open the Modal -->
+            <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
+              Read More
+            </button>
+
+            <-- The Modal -->
+            <!-- <div class="modal" id="myModal">
+              <div class="modal-dialog">
+                <div class="modal-content"> -->
+
+                  <!-- Modal Header -->
+                  <!-- <div class="modal-header">
+                    <h4 class="modal-title">Modal Heading</h4>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                  </div> -->
+
+                  <!-- Modal body -->
+                  <!-- <div class="modal-body">
+                    Modal body..
+                  </div> -->
+
+                  <!-- Modal footer -->
+                  <!-- <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div> -->
           </div>
-        </section>
-        <footer>
-          <p>Copyright &copy; Red Lantern Design, all rights reserved.
-        </footer>
-      </article>
-    </div>
-  </body>
+
+          <div class="col-4">
+            <h1>lorem lorem lorem</h1>
+            <img src="/images/img5.jpg" alt="blue">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur,
+              adipisicing elit. Nihil, blanditiis.</p>
+            <a title="read more" href="#">READ MORE</a>
+          </div>
+        </div>
+      </section>
+      <footer>
+        <p>Copyright &copy; Red Lantern Design, all rights reserved.
+      </footer>
+    </article>
+  </div>
+</body>
+
 </html>
